--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,12 @@
     <string name="default_time">0:00</string>
     <string name="start">Start</string>
     <string name="pause">Pause</string>
-    <string name="set_time">Set time</string>
+    <string name="set_time">Set times</string>
     <string name="back">Back</string>
     <string name="settings">Settings</string>
     <string name="channel_name">kanava</string>
     <string name="channel_description">kanava22</string>
+    <string name="notes_fab_speakable">Open notes</string>
+    <string name="work_speakable">Start or stop work timer</string>
+    <string name="break_speakable">Start or stop break timer</string>
 </resources>
